health-bar margin fix on ios

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -22,8 +22,7 @@ body {
   width: calc(3% + 40px);
   height: 5px;
   position: absolute;
-  /*margin: calc(-107px + -4vw) auto;*/
-  margin: -50% auto;
+  margin: calc(-107px + -4vw) auto; /* need fix on ie*/
   left: calc(50% - (3% + 40px) / 2); /* fix on ios */
   background-color: #FFFFFF ;
   border: 1px solid #000;
